# azure-c-shared-utility

./: CMakeLists.txt  dirs
adapters/: agenttime.c  agenttime_wince.c  httpapi_compact.c  platform_linux.c  platform_linux_mbedtls.c  platform_mbed.cpp  platform_msp430.c  platform_win32.c  platform_wince.c  socketio_berkeley.c  sources  tickcounter_msp430.c  tlsio_mbedtls.c  tlsio_openssl_compact.c  uartio.h  uartio_msp430.c
configs/: azure_c_shared_utilityFunctions.cmake
devdoc/: atrpc_design.vsdx  atrpc_requirements.md  msp430_design.vsdx  platform_msp430_requirements.md  sim808_design.vsdx  tickcounter_msp430_requirements.md  tlsio.md  tlsio_openssl_compact_requirements.md  uartio_design.vsdx  uartio_msp430_requirements.md
devdoc/img_src/: tlsio_state_diagram.pptx
inc/azure_c_shared_utility/: atrpc.h  crt_abstractions.h  http_proxy_io.h  platform.h  tickcounter.h  tickcounter_msp430.h  tlsio.h  tlsio_mbedconfig.h  tlsio_mbedtls.h  tlsio_openssl_compact.h  tlsio_wolfssl.h  uartio.h  umock_c_prod.h  vector.h  xlogging.h
samples/socketio_connect/: CMakeLists.txt
samples/tlsio_connect/: CMakeLists.txt  main.c
samples/tlsio_connect/mbed/: CMakeLists.txt  googlecerts.c
src/: atrpc.c  consolelogger.c  crt_abstractions.c  http_proxy_io.c  httpapiexsas.c  map.c  optionhandler.c  sastoken.c  sources  strings.c  tlsio_mbedtls.c  tlsio_openssl.c  tlsio_schannel.c  tlsio_wolfssl.c  vector.c  xlogging.c
tests/: CMakeLists.txt
tests/atrpc_ut/: CMakeLists.txt  atrpc_ut.c  main.c
tests/httpapiexsas_ut/: httpapiexsas_ut.c
wince/: inttypes.h  stdbool.h  stdint.h
(+24 files in other folders)
